# SweepAi

./: build.gradle.kts  settings.gradle.kts
docs/plans/: autocomplete-model-selector.md
python/sweep-autocomplete-mlx/: README.md  pyproject.toml
python/sweep-autocomplete-mlx/sweep_autocomplete_mlx/: __init__.py  model.py  prompt.py  server.py
src/main/kotlin/dev/sweep/assistant/actions/: SweepCommitMessageAction.kt  SweepProblemsAction.kt
src/main/kotlin/dev/sweep/assistant/components/: PromptBarPanel.kt  SweepConfig.kt
src/main/kotlin/dev/sweep/assistant/data/: Models.kt
src/main/kotlin/dev/sweep/assistant/services/: LocalAutocompleteServerManager.kt  RipgrepManager.kt  SweepCommitMessageService.kt
src/main/kotlin/dev/sweep/assistant/settings/: SweepSettings.kt  SweepSettingsConfigurable.kt
src/main/kotlin/dev/sweep/assistant/startup/: AutocompleteStartupActivity.kt  SweepStartupActivity.kt
src/main/kotlin/dev/sweep/assistant/utils/: DiffUtils.kt
src/test/kotlin/dev/sweep/assistant/: DiffHunkMergeTest.kt
src/test/kotlin/dev/sweep/assistant/e2e/: HappyPathTest.kt
