[project]
name = "sweep-autocomplete-mlx"
version = "0.1.0"
description = "MLX-backed next-edit autocomplete server for the Sweep IntelliJ plugin"
requires-python = ">=3.10"
dependencies = [
  "mlx-lm>=0.20.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "brotli>=1.1.0",
]

[project.scripts]
sweep-autocomplete-mlx = "sweep_autocomplete_mlx.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sweep_autocomplete_mlx"]
